--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -30,8 +30,7 @@ $Noto_Sans_Jp : 'Noto Sans JP',
 "Meiryo",
 sans-serif;
 
-$YuGo :'Yu Gothic', 
-sans-serif;
+$YuGo :"游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 
 //メディアクエリ
 $sp: 767px;
