--- a/scss/object/utility/_display.scss
+++ b/scss/object/utility/_display.scss
@@ -20,5 +20,13 @@
             display: none;
         }
     }
+
+    &_pc {
+        display: none;
+    
+        @include v.tab {
+            display: block;
+        }
+    }
 }
 
